[metadata]
name = MUPKP
author = Lucas Guesser Targino da Silva
author_email = lucasguesserts@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = MUPKP
setup_requires = setuptools
python_requires = >= 3.9
install_requires =
    numpy == 1.23
    scipy == 1.8.1
    matplotlib == 3.5.2
    networkx == 2.8.4

[options.extras_require]
test =
    black == 22.6.0
